--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,9 @@ numpy==1.26.2
 
 # Utilities
 python-dotenv==1.0.0
+
+# Multilingual Support
+textblob==0.19.0
+langdetect==1.0.9
+reportlab==4.4.7
+requests==2.32.5
